# workerbee

./: .env  .eslintignore  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  .gitmodules  .lintstagedrc  CLAUDE.md  README.md  api.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json  tsconfig.tests.json
.github/workflows/: npm_publish.yml
.husky/: pre-commit
__tests__/: index.spec.ts
__tests__/assets/: data.ts  globals.d.ts  globals.js  jest-helper.ts  test.html
__tests__/detailed/: base.ts  bot_events.node.ts  bot_events.ts  bot_providers.ts  complex_scenarios_test_plan.md  (+3 more)
docs/: predefined_filter_categories.md
examples/: .env  Dockerfile.npm  Dockerfile.npm.dockerignore  Dockerfile.testnet  Dockerfile.testnet.dockerignore  README.md  compose.yaml  start.sh  stop.sh
python/: .pre-commit-config.yaml  pyproject.toml
python/workerbee/: bot.py  exceptions.py  interfaces.py
python/workerbee/chain_observers/classifiers/: __init__.py  accounts_classifier.py  block_classifier.py  block_header_classifier.py  collector_classifier_base.py
python/workerbee/chain_observers/collectors/: collector_base.py
python/workerbee/chain_observers/collectors/json_rpc/: account_collector.py
python/workerbee/chain_observers/factories/: data_evaluation_context.py  factory_base.py
python/workerbee/chain_observers/filters/: filter_base.py  new_block_filter.py
python/workerbee/chain_observers/providers/: block_header_provider.py  block_provider.py  provider_base.py
python/workerbee/wax/: __init__.py  get_wax.py
scripts/: bump_npm_version.sh  deploy_github_pages.sh  generate_api_docs.sh  generate_html_docs.sh  npm_publish.sh  precommit_hook.sh  prepublish_hook.sh  publish_by_tag.sh
src/: account_observer.ts  bootstrap.ts  bot.node.ts  bot.ts  bot.web.ts  errors.ts  index.ts  interfaces.ts  logger.ts  node.ts  past-queen.ts  queen.ts  web.ts
(+194 files in other folders)
