[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "workerbee"
version = "0.0.0"
description = ""
authors = [
    "Jakub Ziębiński <ziebinskijakub@gmail.com>",
]
package-mode=true

packages = [
    { include = "workerbee" },
]

source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-beekeepy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-api-packages", url = "https://gitlab.syncad.com/api/v4/projects/198/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
]

[tool.poetry.dependencies]
python = "^3.12"
wax = "0.3.10.dev842+c52541da"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"
mypy = "1.17.1"
ruff = "0.12.8"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '''^v?(?P<base>\d+\.\d+\.\d+)(?:-(?P<stage>[a-zA-Z]+)(?P<revision>\d+))?$'''
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "workerbee/__init__.py",
]
